Fix issue in template where content overflows with the side navigation expanded

--- a/src/app/hazdev-template/styles.scss
+++ b/src/app/hazdev-template/styles.scss
@@ -96,6 +96,15 @@ mark {
   font-weight: 400;
 }
 
+img {
+  max-width: 100%;
+}
+
+.sidenav-content {
+  overflow: hidden;
+}
+
+
 
 /* Grid */
 
